fixing spacing issues with validation
[#72034032]

--- a/app/styles/_control-file.scss
+++ b/app/styles/_control-file.scss
@@ -28,7 +28,7 @@ $orange													:	rgba(255,163,0,1); /*FFA300*/
 
 $green													: hsla(156,100%,35%,1); /*00CC7C*/
 $yellow													: hsla(41,70%,54%,1); /*DCA938*/
-$blue														: hsla(249,13%,44%,1); /*66627E*/
+$blue														: hsla(204,56%,34%,1); /*256188*/
 $warmGray1											: rgba(215,210,203,1); /*D7D2CB*/
 $warmGray4											: rgba(182,173,165,1); /*B6ADA5*/
 $warmGray7											: rgba(150,140,131,1); /*968C83*/
